@@ -14,14 +14,16 @@
 
 extern "C" {
 #include <colinux/common/console.h>
-} class console_widget_t {
+}
+
+class console_widget_t {
       public:
 	console_widget_t();
 	virtual ~ console_widget_t() = 0;
 
 	void co_console(co_console_t * _console);
 	co_console_t *co_console();
-	co_rc_t event(co_console_message_t * message);
+	co_rc_t event(co_console_message_t & message);
 	void redraw();
 
 	virtual co_rc_t loop() = 0;
@@ -38,41 +40,42 @@ extern "C" {
 
 	virtual void draw() = 0;
 
-	virtual co_rc_t op_scroll_up(co_console_unit &topRow,
-				  co_console_unit &bottomRow,
-				  co_console_unit &lines) = 0;
-
-	virtual co_rc_t op_scroll_down(co_console_unit &topRow,
-				  co_console_unit &bottomRow,
-				  co_console_unit &lines) = 0;
-
-	virtual co_rc_t op_putcs(co_console_unit &Y,
-				 co_console_unit &X,
-				 co_console_character *data,
-				 co_console_unit &length) = 0;
-
-	virtual co_rc_t op_putc(co_console_unit &Y,
-				co_console_unit &X,
-				co_console_character &charattr) = 0;
-
-	virtual co_rc_t op_cursor(co_cursor_pos_t & position) = 0;
-
-	virtual co_rc_t op_clear(co_console_unit &T,
-				 co_console_unit &L,
-				 co_console_unit &B,
-				 co_console_unit &R,
-				 co_console_character charattr) = 0;
-
-	virtual co_rc_t op_bmove(co_console_unit &Y,
-				 co_console_unit &X,
-				 co_console_unit &T,
-				 co_console_unit &L,
-				 co_console_unit &B,
-				 co_console_unit &R) = 0;
-
-	virtual co_rc_t op_invert(co_console_unit &Y,
-				  co_console_unit &X,
-				  co_console_unit &C) = 0;
+	virtual co_rc_t op_scroll_up(
+			const co_console_unit &topRow,
+			const co_console_unit &bottomRow,
+			const co_console_unit &lines) = 0;
+	virtual co_rc_t op_scroll_down(
+			const co_console_unit &topRow,
+			const co_console_unit &bottomRow,
+			const co_console_unit &lines) = 0;
+	virtual co_rc_t op_putcs(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_character *data,
+			const co_console_unit &length) = 0;
+	virtual co_rc_t op_putc(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_character &charattr) = 0;
+	virtual co_rc_t op_cursor(
+			const co_cursor_pos_t & position) = 0;
+	virtual co_rc_t op_clear(
+			const co_console_unit &T,
+			const co_console_unit &L,
+			const co_console_unit &B,
+			const co_console_unit &R,
+			const co_console_character charattr) = 0;
+	virtual co_rc_t op_bmove(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_unit &T,
+			const co_console_unit &L,
+			const co_console_unit &B,
+			const co_console_unit &R) = 0;
+	virtual co_rc_t op_invert(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_unit &C) = 0;
 };
 
 extern "C" console_widget_t * co_console_widget_create();
