@@ -49,8 +49,10 @@
     driver will remain until it is uninstalled.
   * If the MAC address is unspecified, a random MAC is choosed 
     using the familiar TAP prefix (00:FF:XX:XX:XX:XX).
-  * Bug fix: Reception and delivery of network packets bigger than 
-    2kb.
+  * Bug fix: Reception and delivery of network packets bigger than
+     2kb.
+  * Bug fix: Consoles and/or other daemons fail to connect to 
+    colinux-daemon on startup (this is Windows only).
 
 * Version 0.6.1 
   * Multiple virtual NICs are supported (eth1, eth2, etc...).
